--- a/arch/arm/mach-exynos/Makefile
+++ b/arch/arm/mach-exynos/Makefile
@@ -327,4 +327,5 @@ obj-$(CONFIG_CORESIGHT_ETM) += coresight.o coresight-etb.o coresight-tpiu.o core
 # for audio platform data driver
 obj-$(CONFIG_EXYNOS_SOUND_PLATFORM_DATA)	+= exynos_sound_platform_data.o
 
+obj-$(CONFIG_RQ_STATS)      += rq_stats.o
 obj-$(CONFIG_INTELLI_PLUG) += intelli_plug.o
