--- a/arch/arm/configs/saber_defconfig
+++ b/arch/arm/configs/saber_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/arm 3.0.84-SaberKernel_31 Kernel Configuration
+# Linux/arm 3.0.85 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -37,7 +37,7 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-SaberKernel_31"
+CONFIG_LOCALVERSION="-SaberKernel_34"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -569,6 +569,7 @@ CONFIG_SAMSUNG_PRODUCT_SHIP=y
 # CONFIG_CORESIGHT_ETM is not set
 CONFIG_CPU_FREQ_TETHERING=y
 CONFIG_RQ_STATS=y
+CONFIG_SK_UC=y
 CONFIG_INTELLI_PLUG=y
 
 #
@@ -730,10 +731,11 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LAZY is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LULZACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ZZMOOVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ADAPTIVE is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ=y
-#CONFIG_CPU_FREQ_GOV_PERFORMANCE is not set
+# CONFIG_CPU_FREQ_GOV_PERFORMANCE is not set
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_HOTPLUG=y
@@ -743,6 +745,7 @@ CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_LULZACTIVE=y
 CONFIG_CPU_FREQ_GOV_LAZY=y
+CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
 CONFIG_CPU_FREQ_GOV_ADAPTIVE=y
 CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
 # CONFIG_CPU_FREQ_GOV_SLP is not set
@@ -786,6 +789,7 @@ CONFIG_EARLYSUSPEND=y
 # CONFIG_NO_USER_SPACE_SCREEN_ACCESS_CONTROL is not set
 # CONFIG_CONSOLE_EARLYSUSPEND is not set
 CONFIG_FB_EARLYSUSPEND=y
+# CONFIG_HIBERNATION is not set
 CONFIG_PM_SLEEP=y
 CONFIG_PM_SLEEP_SMP=y
 CONFIG_PM_RUNTIME=y
