--- a/arch/arm/configs/7100_defconfig
+++ b/arch/arm/configs/7100_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/arm 3.0.84-SaberKernel_31 Kernel Configuration
+# Linux/arm 3.0.88 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -37,14 +37,14 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-SaberKernel_31"
+CONFIG_LOCALVERSION="-SaberKernel_36.5_7100"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_LZO=y
 # CONFIG_KERNEL_GZIP is not set
-CONFIG_KERNEL_LZMA=y
-# CONFIG_KERNEL_LZO is not set
+# CONFIG_KERNEL_LZMA is not set
+CONFIG_KERNEL_LZO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 # CONFIG_SWAP is not set
 CONFIG_SYSVIPC=y
@@ -105,7 +105,7 @@ CONFIG_RD_GZIP=y
 # CONFIG_RD_LZMA is not set
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
-# CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
+CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 # CONFIG_CC_CHECK_WARNING_STRICTLY is not set
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
@@ -589,7 +589,10 @@ CONFIG_USB_CDFS_SUPPORT=y
 CONFIG_SAMSUNG_PRODUCT_SHIP=y
 # CONFIG_CORESIGHT_ETM is not set
 CONFIG_RQ_STATS=y
+# CONFIG_SK_UC is not set
 CONFIG_INTELLI_PLUG=y
+# CONFIG_ABB_CONTROL is not set
+CONFIG_FORCE_FAST_CHARGE=y
 
 #
 # Processor Type
@@ -750,10 +753,11 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LAZY is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LULZACTIVE is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_ZZMOOVE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ADAPTIVE is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ=y
-# CONFIG_CPU_FREQ_GOV_PERFORMANCE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ is not set
+CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_HOTPLUG=y
@@ -763,6 +767,7 @@ CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_LULZACTIVE=y
 CONFIG_CPU_FREQ_GOV_LAZY=y
+CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
 CONFIG_CPU_FREQ_GOV_ADAPTIVE=y
 CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
 # CONFIG_CPU_FREQ_GOV_SLP is not set
@@ -1420,6 +1425,7 @@ CONFIG_BCMDHD_FW_PATH="/system/etc/firmware/fw_bcmdhd.bin"
 CONFIG_BCMDHD_NVRAM_PATH="/system/etc/wifi/bcmdhd.cal"
 CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
 CONFIG_WLAN_REGION_CODE=100
+# CONFIG_BRCM_CCX is not set
 # CONFIG_HOSTAP is not set
 # CONFIG_IWM is not set
 # CONFIG_LIBERTAS is not set
@@ -2368,7 +2374,7 @@ CONFIG_AUDIO_SAMSUNG_MEMSIZE_SRP=1024
 # CONFIG_SND_USE_STEREO_SPEAKER is not set
 CONFIG_SND_USE_LINEOUT_SWITCH=y
 # CONFIG_SND_USE_MUIC_SWITCH is not set
-CONFIG_SND_CONFIG_SND_VOODOO=y
+CONFIG_SND_VOODOO=y
 CONFIG_SND_VOODOO_HP_LEVEL_CONTROL=y
 CONFIG_SND_VOODOO_HP_LEVEL=57
 # CONFIG_SND_VOODOO_RECORD_PRESETS is not set
@@ -2861,6 +2867,10 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 # CONFIG_USB_SERIAL_QUATECH_USB2 is not set
 # CONFIG_VT6656 is not set
 # CONFIG_IIO is not set
+# CONFIG_SNAPPY_COMPRESS is not set
+# CONFIG_SNAPPY_DECOMPRESS is not set
+# CONFIG_LZ4_COMPRESS is not set
+# CONFIG_LZ4_DECOMPRESS is not set
 # CONFIG_XVMALLOC is not set
 # CONFIG_ZRAM is not set
 # CONFIG_FB_SM7XX is not set
