--- a/arch/arm/configs/7100_defconfig
+++ b/arch/arm/configs/7100_defconfig
@@ -589,9 +589,9 @@ CONFIG_USB_CDFS_SUPPORT=y
 CONFIG_SAMSUNG_PRODUCT_SHIP=y
 # CONFIG_CORESIGHT_ETM is not set
 CONFIG_RQ_STATS=y
-# CONFIG_SK_UC is not set
+CONFIG_SK_UC=y
 CONFIG_INTELLI_PLUG=y
-# CONFIG_ABB_CONTROL is not set
+CONFIG_ABB_CONTROL=y
 CONFIG_FORCE_FAST_CHARGE=y
 
 #
@@ -2869,10 +2869,14 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 # CONFIG_IIO is not set
 # CONFIG_SNAPPY_COMPRESS is not set
 # CONFIG_SNAPPY_DECOMPRESS is not set
-# CONFIG_LZ4_COMPRESS is not set
-# CONFIG_LZ4_DECOMPRESS is not set
-# CONFIG_XVMALLOC is not set
-# CONFIG_ZRAM is not set
+CONFIG_LZ4_COMPRESS=y
+CONFIG_LZ4_DECOMPRESS=y
+CONFIG_XVMALLOC=y
+CONFIG_ZRAM=y
+# CONFIG_ZRAM_DEBUG is not set
+# CONFIG_ZRAM_FOR_ANDROID is not set
+# CONFIG_ZRAM_LZO is not set
+CONFIG_ZRAM_LZ4=y
 # CONFIG_FB_SM7XX is not set
 # CONFIG_LIRC_STAGING is not set
 # CONFIG_EASYCAP is not set
