--- a/arch/arm/mach-exynos/Kconfig
+++ b/arch/arm/mach-exynos/Kconfig
@@ -1841,7 +1841,7 @@ config INTELLI_PLUG
 
 config FORCE_FAST_CHARGE
 	bool "Force AC charge mode at will"
-	default y
+	default n
 	help
 	  A simple sysfs interface to force adapters that
 	  are detected as USB to charge as AC.
