--- a/arch/arm/configs/saber_defconfig
+++ b/arch/arm/configs/saber_defconfig
@@ -571,7 +571,7 @@ CONFIG_CPU_FREQ_TETHERING=y
 CONFIG_RQ_STATS=y
 CONFIG_SK_UC=y
 CONFIG_INTELLI_PLUG=y
-# CONFIG_FORCE_FAST_CHARGE is not set
+CONFIG_FORCE_FAST_CHARGE=y
 
 #
 # Processor Type
@@ -2857,10 +2857,14 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 # CONFIG_IIO is not set
 # CONFIG_SNAPPY_COMPRESS is not set
 # CONFIG_SNAPPY_DECOMPRESS is not set
-# CONFIG_LZ4_COMPRESS is not set
-# CONFIG_LZ4_DECOMPRESS is not set
-# CONFIG_XVMALLOC is not set
-# CONFIG_ZRAM is not set
+CONFIG_LZ4_COMPRESS=y
+CONFIG_LZ4_DECOMPRESS=y
+CONFIG_XVMALLOC=y
+CONFIG_ZRAM=y
+# CONFIG_ZRAM_DEBUG is not set
+# CONFIG_ZRAM_FOR_ANDROID is not set
+# CONFIG_ZRAM_LZO is not set
+CONFIG_ZRAM_LZ4=y
 # CONFIG_FB_SM7XX is not set
 # CONFIG_LIRC_STAGING is not set
 # CONFIG_EASYCAP is not set
