--- a/.gitignore
+++ b/.gitignore
@@ -181,5 +181,6 @@ Module.symvers
 /scripts/mod/elfconfig.h
 /scripts/mod/mk_elfconfig
 /scripts/mod/modpost
+scripts/recordmcount
 /usr/gen_init_cpio
 /usr/initramfs_data.cpio
