--- a/arch/arm/configs/7100_defconfig
+++ b/arch/arm/configs/7100_defconfig
@@ -766,7 +766,7 @@ CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_LULZACTIVE=y
 CONFIG_CPU_FREQ_GOV_LAZY=y
-CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
+# CONFIG_CPU_FREQ_GOV_ZZMOOVE is not set
 CONFIG_CPU_FREQ_GOV_ADAPTIVE=y
 CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
 # CONFIG_CPU_FREQ_GOV_SLP is not set
