Revert "Fast default n"
This reverts commit 49a32ccf1175caf3ae43b4a8d5e6a67b26a9ff24.

--- a/arch/arm/mach-exynos/Kconfig
+++ b/arch/arm/mach-exynos/Kconfig
@@ -1841,7 +1841,7 @@ config INTELLI_PLUG
 
 config FORCE_FAST_CHARGE
 	bool "Force AC charge mode at will"
-	default n
+	default y
 	help
 	  A simple sysfs interface to force adapters that
 	  are detected as USB to charge as AC.
